# chatnificent

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.agents/skills/deploy-website/: SKILL.md
.agents/skills/deploy-website/scripts/: deploy.sh  rollback.sh  smoke.sh
.agents/skills/example-app/: SKILL.md
.agents/skills/pillar-dev/: SKILL.md
.agents/skills/server-dev/: SKILL.md
.github/: copilot-instructions.md
deploy/: README.md  chatnificent-website.service  nginx.conf
examples/: How_to_call_functions_with_chat_models.py  README.md  auto_title.py  chatnificent_website.py  conversation_export_pdf_advanced.py  conversation_export_pdf_simple.py  conversation_summary.py  conversation_title.py  custom_branding.py  design_system.py  display_redaction.py  file_serving_advanced.py  file_serving_simple.py  gemini_image_advanced.py  gemini_image_simple.py  gemini_multimodal_advanced.py  gemini_music_advanced.py  gemini_music_simple.py  gemini_tts_advanced.py  gemini_tts_simple.py  gemini_video_simple.py  how_to_call_functions_with_chat_models.py  llm_providers.py  memory_tool.py  memory_tool_multi_user.py  multi_tool_agent.py  ollama_local.py  openai_image_advanced.py  openai_image_simple.py  openai_image_variations.py  openai_responses.py  openai_responses_image_generator.py  openai_responses_image_studio.py  openai_responses_interactive_search.py  openai_responses_website_search.py  openai_tts_advanced.py  openai_tts_simple.py  openrouter_models.py  persistent_storage.py  quickstart.py  (+16 more)
src/chatnificent/: __init__.py  _callbacks.py  action_handlers.py  auth.py  auth_managers.py  callbacks.py  client.py  conversation_managers.py  engine.py  knowledge_retrievers.py  layout.py  layout_builders.py  llm.py  llm_providers.py  message_formatters.py  models.py  persistence_managers.py  server.py  store.py  tools.py  url.py
src/chatnificent/templates/: __init__.py  _contract.py  default.html
src/chatnificent/templates/default/: scripts.js  styles.css  template.html
tests/: conftest.py
tests/e2e/: test_happy_path.py
tests/fixtures/: conversations.json  mock_responses.json
tests/integration/: test_client.py  test_engine_llm.py  test_engine_store.py  test_message_persistence.py  test_raw_logging.py  test_store_concurrency.py  test_ui_interactions.py
tests/unit/: test_auth.py  test_engine.py  test_init.py  test_layout.py  test_models.py  test_retrieval.py  test_server.py  test_store.py  test_template_contract.py  test_tools.py  test_url.py
tests/unit/llm/: conftest.py  test_anthropic.py  test_echo.py  test_gemini.py  test_ollama.py  test_openai.py
tests/unit/server/: test_dash.py  test_layout.py  test_starlette.py
