[project]
name = "chatnificent"
version = "0.0.2"
description = "LLM chat app framework - minimally complete, maximally hackable"
readme = "README.md"
authors = [
    { name = "Elias Dabbas", email = "eliasdabbas@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "dash>=3.0.0",
    "pydantic>=2.0.0",
]

default = [
    "dash-bootstrap-components>=2.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
