 [project]
name = "chatnificent"
version = "0.0.25"
description = "LLM chat app framework - Minimally complete. Maximally hackable"
readme = "README.md"
authors = [
    { name = "Elias Dabbas", email = "eliasdabbas@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "llm",
    "chatbot",
    "chat",
    "ai",
    "agents",
    "rag",
    "mcp",
    "streaming",
    "sse",
    "tool-calling",
    "web-framework",
    "openai",
    "anthropic",
    "conversational-ai",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Dash",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/eliasdabbas/chatnificent"
Repository = "https://github.com/eliasdabbas/chatnificent"
"Bug Tracker" = "https://github.com/eliasdabbas/chatnificent/issues"

[project.optional-dependencies]
# Server adapters
dash = [
    "dash>=3.0.0",
    "dash-bootstrap-components>=2.0.0",
]
starlette = [
    "starlette>=0.27.0",
    "uvicorn>=0.20.0",
]
mantine = [
    "chatnificent[dash]",
    "dash-mantine-components>=1.1.0",
    "dash-iconify==0.1.2",
]

# LLM providers
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
gemini = ["google-genai"]
ollama = ["ollama"]

[dependency-groups]
docs = ["zensical"]

dev = [
    "chatnificent[dash,mantine,starlette,openai,anthropic,gemini,ollama]",
    "httpx>=0.24.0",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-xdist",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
